plugins/Morpheus/stylesheets/main.less
/* ... */
div.dataTableVizHtmlTable:not(.dataTableActions), div.dataTableVizAllColumns, div.dataTableVizGoals {
  tr.subDataTable > td:first-child:before {
    display: inline-block;
    float: left;
    top: 0;
    width: 12px;
    height: 12px;
    margin-left:-1px;
    margin-top:3px;
    margin-right:8px;
    content: '';
  }

  tr.subDataTable:not(.expanded) > td:first-child:before {
    background-image: url(plugins/Morpheus/images/plus.png);
  }

  tr.subDataTable.expanded > td:first-child:before {
    background-image: url(plugins/Morpheus/images/minus.png);
  }
}

.visitsLiveFooter {
    padding-left: 10px;
    a.rightLink {
        .font-default(13px, 16px);
        margin-top: 10px;
        margin-bottom: 10px;
        padding-right: 10px;
    }
}

.UserCountryMap-btn-zoom {
  padding-left: 0;
}

div.sparkline {
    display: -ms-flexbox;
    -ms-box-orient: horizontal;
    -ms-box-pack: center;

    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flex;
    display: flex;

    -webkit-justify-content: space-around;
    -moz-justify-content: space-around;
    -ms-justify-content: space-around;
    justify-content: space-around;
    
    border-bottom: 0;
    margin-bottom: 10px;
    &.linked {
        border-bottom: 1px solid transparent;
        &:hover {
            cursor: pointer;
            border-bottom: 1px dashed #c3c3c3;
        }
    }
}

.widgetpreview-base li.widgetpreview-choosen {
    background: @color-silver-l95;
    position: relative;
    color: @theme-color-text;
    font-weight: normal;
    text-transform: none;
    &:after {
        position: absolute;
        content: '';
        top: 6px;
        right: 10px;
        border-top: 4px solid transparent;
        border-bottom: 4px solid transparent;
        border-left: 5px solid @theme-color-brand;
    }
}

.dataTableNext, .dataTablePrevious {
    color: @theme-color-link;
    .font-default(13px, 14px);
}

.UserCountryMap-info-btn {
    z-index: 1;
}

.annotationView {
    .font-default(10px, 12px);
    text-transform: uppercase;
    color: @theme-color-text;
}

.datatableHeaderMessage, .datatableFooterMessage {
    .font-default(13px, 18px);
    color: @color-silver;
    font-weight: normal;
}
.multisites_asc,
.multisites_desc {
    background-repeat: no-repeat;
    height: 6px;
}

#visitsLive .datetime {
    background: @color-silver-l95;
    border-top: 0;
}

.metricValueBlock input {
    padding: 5px !important;
}

#piwik-promo-share {
    border: 0px;
    background: @theme-color-background-tinyContrast;
    .font-default(10px, 16px);
}

tr:hover #token_auth {
  background: #FFFFF7;
}

#header_message .dropdown a,
#header_message #updateCheckLinkContainer:hover {
    text-decoration: underline;
}

#header_message #updateCheckLinkContainer:hover {
    cursor: pointer;
}

#multisites table.dataTable {
    tfoot tr:hover td {
        background: @theme-color-background-contrast;
    }
}

/** Materialize color overwrites */
.dropdown-content li>a, .dropdown-content li>span {
  color: @theme-color-link !important;
}

.dropdown-content li:hover, .dropdown-content li.active, .dropdown-content li.selected {
  background-color: @theme-color-background-tinyContrast;
}

#root .side-nav .collapsible-body li a {
  padding-top: 20px;
  line-height: 20px;
  height: auto;
  padding-bottom: 20px;
}

